// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI/Common/Content - Multi Select should hide checkbox panel when not expanded 1`] = `
<pf-multi-select
  checkboxClick={[Function EventEmitter]}
  clearSelectionsClick={[Function EventEmitter]}
  isExpanded$={[Function Observable]}
  options={[Function Array]}
  searchTerm=""
  selectFacadeClick={[Function EventEmitter]}
  tooltipDir="undefined"
>
  <div
    class="multi-select-container"
  >
    <label
      class="mr-2"
    >
      
    </label>
    <div
      class="d-inline-block"
    >
      <a
        class="text-decoration-none"
        href="javascript:void(0)"
      >
        <span
          class="select-facade d-inline-block rounded p-2"
        >
          <label
            class="d-inline-block mb-0 ellipsis-overflowing-text pr-0"
            ng-reflect-ngb-tooltip=""
          >
            
          </label>
          <i
            class="fas fa-angle-down d-inline-block ml-2"
          />
        </span>
      </a>
    </div>
    
  </div>
</pf-multi-select>
`;

exports[`UI/Common/Content - Multi Select should hide the loading indicator when not loading 1`] = `
<pf-multi-select
  checkboxClick={[Function EventEmitter]}
  clearSelectionsClick={[Function EventEmitter]}
  isExpanded$={[Function Observable]}
  isLoading$={[Function Observable]}
  options={[Function Array]}
  searchTerm=""
  selectFacadeClick={[Function EventEmitter]}
  tooltipDir="undefined"
>
  <div
    class="multi-select-container"
  >
    <label
      class="mr-2"
    >
      
    </label>
    <div
      class="d-inline-block"
    >
      <a
        class="text-decoration-none"
        href="javascript:void(0)"
      >
        <span
          class="select-facade d-inline-block rounded p-2"
        >
          <label
            class="d-inline-block mb-0 ellipsis-overflowing-text pr-0"
            ng-reflect-ngb-tooltip=""
          >
            
          </label>
          <i
            class="fas fa-angle-down d-inline-block ml-2"
          />
        </span>
      </a>
    </div>
    
    <div
      class="selections-container position-absolute"
    >
      
      
      <div>
        <i
          class="fas fa-search"
        />
        <input
          class="form-control d-block"
          placeholder="Search"
          type="text"
        />
        <a
          class="position-absolute text-muted"
          href="javascript:void(0)"
        >
          <span>
            <i
              class="fas fa-times"
            />
          </span>
        </a>
        <button
          class="clear-selections btn d-block mt-2 mb-2"
        >
          Clear Selections
        </button>
        <div
          class="checkbox-container"
        >
          
          <label
            class="no-results font-italic text-center d-block"
          >
            No Results Found
          </label>
        </div>
      </div>
    </div>
  </div>
</pf-multi-select>
`;

exports[`UI/Common/Content - Multi Select should render its options when expanded 1`] = `
<pf-multi-select
  checkboxClick={[Function EventEmitter]}
  clearSelectionsClick={[Function EventEmitter]}
  isExpanded$={[Function Observable]}
  isLoading$={[Function Observable]}
  options={[Function Array]}
  searchTerm=""
  selectFacadeClick={[Function EventEmitter]}
  tooltipDir="undefined"
>
  <div
    class="multi-select-container"
  >
    <label
      class="mr-2"
    >
      
    </label>
    <div
      class="d-inline-block"
    >
      <a
        class="text-decoration-none"
        href="javascript:void(0)"
      >
        <span
          class="select-facade d-inline-block rounded p-2"
        >
          <label
            class="d-inline-block mb-0 ellipsis-overflowing-text pr-0"
            ng-reflect-ngb-tooltip=""
          >
            
          </label>
          <i
            class="fas fa-angle-down d-inline-block ml-2"
          />
        </span>
      </a>
    </div>
    
    <div
      class="selections-container position-absolute"
    >
      
      
      <div>
        <i
          class="fas fa-search"
        />
        <input
          class="form-control d-block"
          placeholder="Search"
          type="text"
        />
        <a
          class="position-absolute text-muted"
          href="javascript:void(0)"
        >
          <span>
            <i
              class="fas fa-times"
            />
          </span>
        </a>
        <button
          class="clear-selections btn d-block mt-2 mb-2"
        >
          Clear Selections
        </button>
        <div
          class="checkbox-container"
        >
          
          
          
          <label
            class="checkbox-label d-block ellipsis-overflowing-text m-0"
          >
            <input
              class="mr-1"
              type="checkbox"
            />
            Zoos and Zookeeping 
          </label>
          
          <label
            class="no-results font-italic text-center d-block"
          >
            No Results Found
          </label>
        </div>
      </div>
    </div>
  </div>
</pf-multi-select>
`;

exports[`UI/Common/Content - Multi Select should render the correct primary label text 1`] = `
<pf-multi-select
  checkboxClick={[Function EventEmitter]}
  clearSelectionsClick={[Function EventEmitter]}
  labelText={[Function String]}
  options={[Function Array]}
  searchTerm=""
  selectFacadeClick={[Function EventEmitter]}
  tooltipDir="undefined"
>
  <div
    class="multi-select-container"
  >
    <label
      class="mr-2"
    >
      job family
    </label>
    <div
      class="d-inline-block"
    >
      <a
        class="text-decoration-none"
        href="javascript:void(0)"
      >
        <span
          class="select-facade d-inline-block rounded p-2"
        >
          <label
            class="d-inline-block mb-0 ellipsis-overflowing-text pr-0"
            ng-reflect-ngb-tooltip=""
          >
            
          </label>
          <i
            class="fas fa-angle-down d-inline-block ml-2"
          />
        </span>
      </a>
    </div>
    
  </div>
</pf-multi-select>
`;

exports[`UI/Common/Content - Multi Select should show the checkbox panel when expanded 1`] = `
<pf-multi-select
  checkboxClick={[Function EventEmitter]}
  clearSelectionsClick={[Function EventEmitter]}
  isExpanded$={[Function Observable]}
  options={[Function Array]}
  searchTerm=""
  selectFacadeClick={[Function EventEmitter]}
  tooltipDir="undefined"
>
  <div
    class="multi-select-container"
  >
    <label
      class="mr-2"
    >
      
    </label>
    <div
      class="d-inline-block"
    >
      <a
        class="text-decoration-none"
        href="javascript:void(0)"
      >
        <span
          class="select-facade d-inline-block rounded p-2"
        >
          <label
            class="d-inline-block mb-0 ellipsis-overflowing-text pr-0"
            ng-reflect-ngb-tooltip=""
          >
            
          </label>
          <i
            class="fas fa-angle-down d-inline-block ml-2"
          />
        </span>
      </a>
    </div>
    
    <div
      class="selections-container position-absolute"
    >
      
      
      <div>
        <i
          class="fas fa-search"
        />
        <input
          class="form-control d-block"
          placeholder="Search"
          type="text"
        />
        <a
          class="position-absolute text-muted"
          href="javascript:void(0)"
        >
          <span>
            <i
              class="fas fa-times"
            />
          </span>
        </a>
        <button
          class="clear-selections btn d-block mt-2 mb-2"
        >
          Clear Selections
        </button>
        <div
          class="checkbox-container"
        >
          
          <label
            class="no-results font-italic text-center d-block"
          >
            No Results Found
          </label>
        </div>
      </div>
    </div>
  </div>
</pf-multi-select>
`;

exports[`UI/Common/Content - Multi Select should show the loading indicator when loading 1`] = `
<pf-multi-select
  checkboxClick={[Function EventEmitter]}
  clearSelectionsClick={[Function EventEmitter]}
  isExpanded$={[Function Observable]}
  isLoading$={[Function Observable]}
  options={[Function Array]}
  searchTerm=""
  selectFacadeClick={[Function EventEmitter]}
  tooltipDir="undefined"
>
  <div
    class="multi-select-container"
  >
    <label
      class="mr-2"
    >
      
    </label>
    <div
      class="d-inline-block"
    >
      <a
        class="text-decoration-none"
        href="javascript:void(0)"
      >
        <span
          class="select-facade d-inline-block rounded p-2"
        >
          <label
            class="d-inline-block mb-0 ellipsis-overflowing-text pr-0"
            ng-reflect-ngb-tooltip=""
          >
            
          </label>
          <i
            class="fas fa-angle-down d-inline-block ml-2"
          />
        </span>
      </a>
    </div>
    
    <div
      class="selections-container position-absolute"
    >
      
      <span
        class="loading d-block mt-2 mb-2 text-center"
      >
        <pf-loading-indicator />
      </span>
      
    </div>
  </div>
</pf-multi-select>
`;
